package co.edu.uniquindio.model.cuentaBanco;

public enum TipoCuenta {
        AHORROS, CORRIENTE;
}
