@startuml
'https://plantuml.com/class-diagram

class CuentaBancaria{
    - numeroCuenta : String
    - saldo : Double
    - tipoCuenta : TipoCuenta
    + consultarSaldo()
    + retirarValor()
    + consignarValor()
    + compararCuentas()
    + enviarDinero()
}
class Banco{
    - nombre : String
    - listaCuentas
    - listaClientes
    + buscarCuenta()
    - validarCuenta()
    + addCuenta()
    - validarCliente()
    + addCliente()
    + retirarDinero()
    + consginarDinero()
    + tranferirDinero()
    + consultarSaldo()
}
class Cliente{
    - nombre : String
    - apellido : String
    - documento : String
    - edad : Integer
    - listaCuentas
    + addCuenta()
    - validarCuenta()
}
enum TipoCuenta {
AHORROS, CORRIENTE
}
Banco *-- Cliente : < listaClientes*
Banco *-- CuentaBancaria : < listaCuentas*

Cliente - CuentaBancaria : listaCuentas* <

CuentaBancaria --> TipoCuenta : + tipoCuenta <





@enduml